--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <div id="container"></div>
+    <div id="container" class=""></div>
     <script type="text/javascript" src='bundle.js'></script>
   </body>
 </html>
